--- a/index.html
+++ b/index.html
@@ -10,17 +10,20 @@
 </head>
 <body>
     <div class="video-cont">
-        <video autoplay src=""></video>
+        <video autoplay ></video>
     </div>
     <div class="action-cont">
-        <div class="record-button-cont">
-            <div class="record-btn"></div>
+        <div class="record-btn-cont">
+            <div class="record-btn "></div>
         </div>
         <div class="capture-btn-cont">
-            <div class="capture-btn"></div>
+            <div class="capture-btn "></div>
         </div>
 
 
+    </div>
+    <div class="timer-cont">
+        <h1 class="timer">00:00:00</h1>
     </div>
     <script src="./script.js"></script>
 </body>
