--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
      <div class="filter transparent"></div>
    </div>
    <div class="filter-layer"></div>
+   <script src="https://unpkg.com/shortid-dist@1.0.5/dist/shortid-2.2.13.min.js"></script>
+   <script src="./database.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
