--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+
     <link rel ="stylesheet" href="./style.css">
     <title>camera-gallery</title>
 </head>
@@ -31,8 +33,19 @@
      <div class="filter transparent"></div>
    </div>
    <div class="filter-layer"></div>
+
+   <span class="material-icons gallery">
+    collections
+    </span>
+   
    <script src="https://unpkg.com/shortid-dist@1.0.5/dist/shortid-2.2.13.min.js"></script>
    <script src="./database.js"></script>
     <script src="./script.js"></script>
+    <script>
+        let gallery = document.querySelector(".gallery");
+        gallery.addEventListener("click" , (e) => {
+            location.assign("./gallery.html");
+        })
+    </script>
 </body>
 </html>
